adding some images in project section

--- a/index.html
+++ b/index.html
@@ -47,14 +47,14 @@
                 </div>
             </div>
             <div class="s2">
-                <img src="/Images/AmenAllah-TunisiaDevDays.png" id="img1" class="img5"  alt="Erreur">
+                <img src="/Images/AmenAllah-TunisiaDevDays.png" id="img1" class="img5"  alt="Erreur" loading="lazy">
             </div>
         </div>
     </section>
     <main id="about">
         <div class="s">
             <div class="s2">
-                <img src="/Images/image2.jpg"  alt="Erreur">
+                <img src="/Images/image2.jpg"  alt="Erreur" loading="lazy">
             </div>
             <div class="s1">
                 <h3>My <span class="span2">intro</span> <br> <span id="span3">About me</span></h3>
@@ -188,7 +188,7 @@
         </div>
         <div class="main">
             <div class="man ">
-                <img loading="lazy" src="../Images/man.webp" alt="">
+                <img loading="lazy" src="../Images/man.webp" alt="Erreur" loading="lazy">
             </div>
             <div class="skills">
                 <i data-name="HTML5" class="fa-brands fa-html5 toReveal rReveal" style="--original-color : #DD4B25"></i>
@@ -227,24 +227,24 @@
     <div class="ar1">
         <div class="ar">
             <div class="card" id="carte1">
-                <a href="https://github.com/AmenAllah-Mselmi/MIC-platform1" target="_blank"><img src="/Images/MicrosoftPlatform.png" alt="Erreur"></a>
+                <a href="https://github.com/AmenAllah-Mselmi/MIC-platform1" target="_blank"><img src="/Images/MicrosoftPlatform.png" alt="Erreur" loading="lazy"></a>
                 
             </div>
             <div class="card">
-                <a href="https://github.com/AmenAllah-Mselmi/RocketBot"><img src="/Images/IEEE ROCKETBOT.png" alt="Erreur"></a>
+                <a href="https://github.com/AmenAllah-Mselmi/RocketBot"><img src="/Images/IEEE ROCKETBOT.png" alt="Erreur" loading="lazy"></a>
                 
             </div>
             <div class="card">
-                <a href="https://github.com/AmenAllah-Mselmi/Site-de-vente-de-voiture-Front-End-Angular-TypeScript" target="_blank"> <img src="/Images/VenteVoitures.png" alt="Erreur"></a>
+                <a href="https://github.com/AmenAllah-Mselmi/Site-de-vente-de-voiture-Front-End-Angular-TypeScript" target="_blank"> <img src="/Images/VenteVoitures.png" alt="Erreur" loading="lazy"></a>
             </div>
             <div class="card">
-                <a href="https://github.com/AmenAllah-Mselmi/Mini-Projet" target="_blank"><img src="/Images/Lavage.png" alt="Erreur"></a>   
+                <a href="https://github.com/AmenAllah-Mselmi/Mini-Projet" target="_blank"><img src="/Images/Lavage.png" alt="Erreur" loading="lazy"></a>   
             </div>
             <div class="card">
-                <a href="https://github.com/AmenAllah-Mselmi/E-commerce-application-using-Angular-Typescript" target="_blank"><img src="/Images/E-commerce.png" alt="Erreur"></a>
+                <a href="https://github.com/AmenAllah-Mselmi/E-commerce-application-using-Angular-Typescript" target="_blank"><img src="/Images/E-commerce.png" alt="Erreur" loading="lazy"></a>
             </div>
             <div class="card">
-                <a href="https://github.com/AmenAllah-Mselmi/Nouvil-academy" target="_blank" ><img src="/Images/NouvilAcademy.png" alt="Erreur"></a>
+                <a href="https://github.com/AmenAllah-Mselmi/Nouvil-academy" target="_blank" ><img src="/Images/NouvilAcademy.png" alt="Erreur" loading="lazy"></a>
             </div>
         </div>
     </div>
